// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateSigil — fidélité géométrique (snapshots figés) > Boule de feu (evocation, niv.3, VSM) 1`] = `
{
  "color": "#e85a5a",
  "paths": [
    {
      "d": "M 41.6 50 A 8.4 8.4 0 1 1 58.4 50 A 8.4 8.4 0 1 1 41.6 50 Z",
      "delay": 0,
      "width": 2,
    },
    {
      "d": "M 45.81 59.3 L 32.01 74.01 L 42.25 56.63 Z",
      "delay": 90,
      "width": 1.8,
    },
    {
      "d": "M 40.46 53.62 L 20.3 54.26 L 39.83 49.21 Z",
      "delay": 180,
      "width": 1.8,
    },
    {
      "d": "M 40.7 45.81 L 25.99 32.01 L 43.37 42.25 Z",
      "delay": 270,
      "width": 1.8,
    },
    {
      "d": "M 46.38 40.46 L 45.74 20.3 L 50.79 39.83 Z",
      "delay": 360,
      "width": 1.8,
    },
    {
      "d": "M 54.19 40.7 L 67.99 25.99 L 57.75 43.37 Z",
      "delay": 450,
      "width": 1.8,
    },
    {
      "d": "M 59.54 46.38 L 79.7 45.74 L 60.17 50.79 Z",
      "delay": 540,
      "width": 1.8,
    },
    {
      "d": "M 59.3 54.19 L 74.01 67.99 L 56.63 57.75 Z",
      "delay": 630,
      "width": 1.8,
    },
    {
      "d": "M 53.62 59.54 L 54.26 79.7 L 49.21 60.17 Z",
      "delay": 720,
      "width": 1.8,
    },
    {
      "d": "M 77.52 67.4 Q 81.52 65.2 85.52 67.4 Q 81.52 69.6 77.52 67.4 Z",
      "delay": 810,
      "width": 1.2,
    },
    {
      "d": "M 28.6 81.52 Q 32.6 79.32 36.6 81.52 Q 32.6 83.72 28.6 81.52 Z",
      "delay": 900,
      "width": 1.2,
    },
    {
      "d": "M 14.48 32.6 Q 18.48 30.4 22.48 32.6 Q 18.48 34.8 14.48 32.6 Z",
      "delay": 990,
      "width": 1.2,
    },
    {
      "d": "M 63.4 18.48 Q 67.4 16.28 71.4 18.48 Q 67.4 20.68 63.4 18.48 Z",
      "delay": 1080,
      "width": 1.2,
    },
    {
      "d": "M 69.49 83.78 Q 70 81.18 68 81.18 Q 66 81.18 66.5 78.58",
      "delay": 1170,
      "width": 1.2,
    },
    {
      "d": "M 16.22 69.49 Q 20.82 68 18.82 68 Q 16.82 68 21.42 66.5",
      "delay": 1260,
      "width": 1.2,
    },
    {
      "d": "M 30.51 16.22 Q 34 18.82 32 18.82 Q 30 18.82 33.5 21.42",
      "delay": 1350,
      "width": 1.2,
    },
    {
      "d": "M 83.78 30.51 Q 83.18 32 81.18 32 Q 79.18 32 78.58 33.5",
      "delay": 1440,
      "width": 1.2,
    },
    {
      "d": "M 9 50 A 41 41 0 1 1 91 50 A 41 41 0 1 1 9 50 Z",
      "delay": 1530,
      "width": 1.4,
    },
  ],
  "school": "evocation",
  "spellId": "boule-de-feu",
  "viewBox": "0 0 100 100",
}
`;

exports[`generateSigil — fidélité géométrique (snapshots figés) > Souhait (conjuration, niv.9, V) 1`] = `
{
  "color": "#5dab86",
  "paths": [
    {
      "d": "M 20 50 A 30 30 0 1 1 80 50 A 30 30 0 1 1 20 50 Z",
      "delay": 0,
      "width": 1.8,
    },
    {
      "d": "M 35.35 73.39 L 39.85 56.4 L 22.58 53.12 L 38.67 46.05 L 30.46 30.51 L 46.02 38.68 L 53.06 22.57 L 56.37 39.83 L 73.35 35.29 L 61.92 48.64 L 76.06 59.08 L 58.5 58.47 L 59.15 76.04 L 48.67 61.93 Z",
      "delay": 90,
      "width": 2.2,
    },
    {
      "d": "M 38.32 57.36 L 44.04 50.68 L 36.97 45.46 L 45.75 45.76 L 45.43 36.98 L 50.66 44.04 L 57.33 38.31 L 55.08 46.8 L 63.71 48.44 L 55.67 51.97 L 59.77 59.75 L 51.99 55.66 L 48.47 63.72 L 46.81 55.08 Z",
      "delay": 180,
      "width": 1.5,
    },
    {
      "d": "M 80.91 58.79 Q 84.91 56.59 88.91 58.79 Q 84.91 60.99 80.91 58.79 Z",
      "delay": 270,
      "width": 1.2,
    },
    {
      "d": "M 37.21 84.91 Q 41.21 82.71 45.21 84.91 Q 41.21 87.11 37.21 84.91 Z",
      "delay": 360,
      "width": 1.2,
    },
    {
      "d": "M 11.09 41.21 Q 15.09 39.01 19.09 41.21 Q 15.09 43.41 11.09 41.21 Z",
      "delay": 450,
      "width": 1.2,
    },
    {
      "d": "M 54.79 15.09 Q 58.79 12.89 62.79 15.09 Q 58.79 17.29 54.79 15.09 Z",
      "delay": 540,
      "width": 1.2,
    },
  ],
  "school": "conjuration",
  "spellId": "souhait",
  "viewBox": "0 0 100 100",
}
`;

exports[`generateSigil — fidélité géométrique (snapshots figés) > Trait du destin (divination, niv.0, V) 1`] = `
{
  "color": "#d4b25e",
  "paths": [
    {
      "d": "M 20 50 Q 50 32 80 50 Q 50 68 20 50 Z",
      "delay": 0,
      "width": 2.2,
    },
    {
      "d": "M 43.4 50 A 6.6 6.6 0 1 1 56.6 50 A 6.6 6.6 0 1 1 43.4 50 Z",
      "delay": 90,
      "width": 2,
    },
    {
      "d": "M 71 50.33 L 78.65 50.45",
      "delay": 180,
      "width": 1.2,
    },
    {
      "d": "M 58.79 69.07 L 62.19 76.45",
      "delay": 270,
      "width": 1.2,
    },
    {
      "d": "M 38.44 67.54 L 33.65 74.81",
      "delay": 360,
      "width": 1.2,
    },
    {
      "d": "M 29.08 48.13 L 19.58 47.28",
      "delay": 450,
      "width": 1.2,
    },
    {
      "d": "M 39.62 31.74 L 35.02 23.65",
      "delay": 540,
      "width": 1.2,
    },
    {
      "d": "M 62.21 32.92 L 66.43 27.02",
      "delay": 630,
      "width": 1.2,
    },
    {
      "d": "M 81.91 52.58 Q 85.91 50.38 89.91 52.58 Q 85.91 54.78 81.91 52.58 Z",
      "delay": 720,
      "width": 1.2,
    },
    {
      "d": "M 43.42 85.91 Q 47.42 83.71 51.42 85.91 Q 47.42 88.11 43.42 85.91 Z",
      "delay": 810,
      "width": 1.2,
    },
    {
      "d": "M 10.09 47.42 Q 14.09 45.22 18.09 47.42 Q 14.09 49.62 10.09 47.42 Z",
      "delay": 900,
      "width": 1.2,
    },
    {
      "d": "M 48.58 14.09 Q 52.58 11.89 56.58 14.09 Q 52.58 16.29 48.58 14.09 Z",
      "delay": 990,
      "width": 1.2,
    },
    {
      "d": "M 72.52 81.84 Q 72.78 79.39 70.78 79.39 Q 68.78 79.39 69.05 76.94",
      "delay": 1080,
      "width": 1.2,
    },
    {
      "d": "M 18.16 72.52 Q 22.61 70.78 20.61 70.78 Q 18.61 70.78 23.06 69.05",
      "delay": 1170,
      "width": 1.2,
    },
    {
      "d": "M 27.48 18.16 Q 31.22 20.61 29.22 20.61 Q 27.22 20.61 30.95 23.06",
      "delay": 1260,
      "width": 1.2,
    },
    {
      "d": "M 81.84 27.48 Q 81.39 29.22 79.39 29.22 Q 77.39 29.22 76.94 30.95",
      "delay": 1350,
      "width": 1.2,
    },
  ],
  "school": "divination",
  "spellId": "message",
  "viewBox": "0 0 100 100",
}
`;
